--- a/index.html
+++ b/index.html
@@ -3,35 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minu veebileht</title>
+    <title>Bootstrap grid näidis</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
-    <!-- Sinu stiilid -->
+    <!-- Kohandatud stiilid -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Projekt</a>
+    <a class="navbar-brand" href="#">Minu projekt</a>
   </div>
 </nav>
 
-<header class="bg-primary text-white py-5">
+<header class="bg-primary text-white py-5 mb-4">
   <div class="container">
-    <h1 class="display-4">Tere tulemast!</h1>
-    <p class="lead">See on Bootstrapil põhinev näidis GitHub Pages’i jaoks.</p>
+    <h1 class="display-5">Tere tulemast Bootstrap grid näitesse!</h1>
+    <p class="lead mb-0">Siin on lihtne paigutus, mida õpilased saavad kohe edasi arendada.</p>
   </div>
 </header>
 
-<div class="container my-5">
-  <h2>Sisu</h2>
-  <p>Siia saad kirjutada oma projekti koodi või teksti.</p>
-</div>
+<main class="container mb-5">
+  <!-- Esimene rida: kolm veergu -->
+  <section class="mb-4">
+    <h2 class="h4 mb-3">Kolme veeruga paigutus</h2>
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <div class="p-3 border rounded-3 bg-light">
+          <h3 class="h5">Veerg 1</h3>
+          <p>Siia saab panna teksti, pildid, kaardid jms.</p>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="p-3 border rounded-3 bg-light">
+          <h3 class="h5">Veerg 2</h3>
+          <p>Bootstrap grid võimaldab mugavalt kujundada responsiivseid lehti.</p>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="p-3 border rounded-3 bg-light">
+          <h3 class="h5">Veerg 3</h3>
+          <p>Väiksematel ekraanidel veerud lähevad automaatselt üksteise alla.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<!-- Bootstrap JS -->
+  <!-- Teine rida: 8/4 jaotus -->
+  <section>
+    <h2 class="h4 mb-3">8 / 4 jaotus</h2>
+    <div class="row">
+      <div class="col-md-8 mb-3">
+        <div class="p-3 border rounded-3 bg-light">
+          <h3 class="h5">Põhisisu (col-md-8)</h3>
+          <p>See ala võib olla artikli tekst, pildigalerii või muu põhisisu.</p>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="p-3 border rounded-3 bg-light">
+          <h3 class="h5">Külgriba (col-md-4)</h3>
+          <p>Siia saab panna näiteks menüü, lingid, lisainfo, reklaamid jne.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+
+<footer class="bg-dark text-white py-3">
+  <div class="container text-center small">
+    &copy; <span id="year"></span> Minu bootstrap-projekt
+  </div>
+</footer>
+
+<!-- Bootstrap JS (sisaldab ka Popperit) -->
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 
 <!-- Sinu JavaScript -->
