--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Bootstrap grid näidis</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    
     <!-- Kohandatud stiilid -->
     <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 <body>
 
@@ -78,10 +79,10 @@
   </div>
 </footer>
 
-<!-- Bootstrap JS (sisaldab ka Popperit) -->
-<script src="assets/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-<!-- Sinu JavaScript -->
+<!-- Minu JavaScript -->
 <script src="assets/js/script.js"></script>
 </body>
 </html>
