--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
   </section>
 </main>
 
+
+<!-- Test Flex -->
+
+<div class="wrapper">
+  <div class="box">Esimene kast</div>
+  <div class="box">Teine kast</div>
+  <div class="box">Kolmas kast</div>
+</div>
+    
 <footer class="bg-dark text-white py-3">
   <div class="container text-center small">
     &copy; <span id="year"></span> Minu bootstrap-projekt
